# simple-c

./: .gitignore  CMakeLists.txt  README.md  ToDo.md  build.sh  test.sh
docs/: descrição.tex  manual_descricao.aux  manual_descricao.tex  manual_descricao.toc  todo.md  user_manual(1).tex  user_manual.tex
flex/: .gitignore  Makefile  lex.yy.c  lexico  lexico.l  test.c  test.sh  test.txt
flex/tests/: teste_erros.spc
src/: app.c  app.h  defines.h  pcc.h
src/bison/: sintatico.y
src/file/: file.c  file.h
src/flex/: Makefile  lex.yy.c  lexico.l
src/flex/tests/: teste_erros.spc  teste_valido.spc
src/logger/: log.c  log.h
src/parser/: parser.h
src/s-tree/: s_tree.h
src/scanner/: scanner.c  scanner.h
src/token/: token.c  token.h
src/utils/: utils.c  utils.h
test/: teste_valido.spc
